Lock scroll on to prevent jumping pages

--- a/style.css
+++ b/style.css
@@ -9,37 +9,39 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: harwintonfair
 */
 
-body{
-    color: #333;
-    font: 400 1rem/1.6 Karla,sans-serif;
+html {
+  overflow-y: scroll;
 }
-.bar{
-    background: #524656;
-    padding: 1em;
 
+body {
+  color: #333;
+  font: 400 1rem/1.6 Karla, sans-serif;
+}
+.bar {
+  background: #524656;
+  padding: 1em;
 }
 
 .bar,
-.call-to-action{
-    color: #fff;
-    display: block;
+.call-to-action {
+  color: #fff;
+  display: block;
 }
 
-.call-to-action{
-    background: #cf4647;
-    text-align: center;
-    padding: 2em;
-
+.call-to-action {
+  background: #cf4647;
+  text-align: center;
+  padding: 2em;
 }
 
-.headline{
-    text-transform: uppercase;
+.headline {
+  text-transform: uppercase;
 }
 
 @media screen and (min-width: 768px) {
-    .wrapper{
-        margin-left: auto;
-        margin-right: auto;
-        max-width: 1040px;
-    }
+  .wrapper {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1040px;
+  }
 }
